feat: Assemble contact single page and do cross-site improvements

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,7 +22,7 @@ html {
 
 button,
 a {
-  @apply text-lake-lime-900 font-heading text-body-m font-medium;
+  @apply text-lake-lime-900 font-heading font-medium;
 }
 
 h1,
